[package]
name = "logstash-tracing-examples"
version = "0.7.0"
authors = ["Henrik Gustafsson <gsson@fnord.se>"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-logstash = { path = "../tracing-logstash" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }

tracing-log = { version = "0.2", features = ["log-tracer"] }
log = "0.4"
