[package]
name = "tracing-logstash"
version = "0.3.0"
authors = ["Henrik Gustafsson <gsson@fnord.se>"]
license = "MIT"
edition = "2021"
description = "Minimal library to output logstash formatted events"
homepage = "https://github.com/gsson/tracing-logstash"
readme = "../README.md"
keywords = ["logging", "tracing", "logstash"]

[dependencies]
tracing-core = { version = "0", default-features = false }
tracing-subscriber = { version = "0", default-features = false, features = [ "fmt" ] }
serde = "1"
serde_json = "1"
time = { version = "0.3", default-features = false, features = [ "std", "formatting" ] }